# Madoka_Bot

./: LICENSE  README.md  bot.py  pyproject.toml
plugins/madoka_bundle/: __init__.py  config.py  constants.py  registry.py  utils.py
plugins/madoka_bundle/db/: __init__.py  models.py  services.py  user_source.py
plugins/madoka_bundle/plugins/common/: __init__.py  utils.py
plugins/madoka_bundle/plugins/echo/: __init__.py  config.py
plugins/madoka_bundle/plugins/poke/: __init__.py
plugins/madoka_bundle/plugins/sign/: __init__.py  config.py  utils.py
plugins/madoka_bundle/render/: __init__.py  config.py  utils.py
plugins/madoka_bundle/render/template/: daily_sign.html  daily_sign_backup.html
plugins/steam_info_main/: __init__.py  config.py  constants.py  data_source.py  draw.py  steam.py  utils.py
